manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kapilkhubchandani
  labels:
    app: kapilkhubchandani
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: kapilkhubchandani
