manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kapilkhubchandani
  annotations:
     kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: khubchandani.fa4a9d5065e946cfa588.westeurope.aksapp.io
      http:
        paths:
          - backend:
              service:
                 name: kapilkhubchandani
                 port:
                   name: http
            path: /
            pathType: Prefix
